parameterize font in sass
Use resources.ExecuteAsTemplate (introduced inn hugo 0.43) to use config variables in SASS.
Unfortunately, only base SASS files can be used as Go template, that's why the variable is defined
in main file instead of partials

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -1,2 +1,8 @@
+// ==========================================================================
+// Parameterized variables
+// ==========================================================================
+
+$font-stack: '{{ .Site.Params.font.name | default "Open Sans" }}', sans-serif
+
 @import "bulma/bulma"
 @import "fresh/core"
