--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -1,5 +1,6 @@
 {{- $inServerMode := .Site.IsServer }}
 {{- $sass         := "style.sass" }}
+{{- $sassTemplate := "style.$sass" }}
 {{- $cssTarget    := "css/style.css" }}
 {{- $cssOpts      := cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle" "compressed") }}
 {{- $fontName     := .Site.Params.font.name | default "Open Sans" }}
@@ -9,10 +10,10 @@
 <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}" />
 <link href="{{ $fontUrl }}" rel="stylesheet">
 {{- if $inServerMode }}
-{{- $css := resources.Get $sass | toCSS $cssOpts }}
+{{- $css := resources.Get $sass | resources.ExecuteAsTemplate $sassTemplate . | toCSS $cssOpts }}
 <link rel="stylesheet" type="text/css" href="{{ $css.RelPermalink }}">
 {{- else }}
-{{- $css := resources.Get $sass | toCSS $cssOpts | minify | fingerprint }}
+{{- $css := resources.Get $sass | resources.ExecuteAsTemplate $sassTemplate . | toCSS $cssOpts | minify | fingerprint }}
 <link rel="stylesheet" type="text/css" href="{{ $css.RelPermalink }}" integrity="{{ $css.Data.Integrity }}">
 {{- end }}
 <link rel="stylesheet" type="text/css" href="{{ "css/icons.css" | relURL }}">
