--- a/assets/fresh/partials/_sidebar.scss
+++ b/assets/fresh/partials/_sidebar.scss
@@ -115,7 +115,7 @@ Sidebar Styles
             max-width: 400px;
             list-style: none;
             list-style-type: none;
-            font-family: Sfont-stack !important;
+            font-family: $font-stack !important;
             li {
                 a {
                     padding: 20px 25px;
