--- a/assets/fresh/partials/_cards.scss
+++ b/assets/fresh/partials/_cards.scss
@@ -12,7 +12,7 @@ Cards and Card content styles
     border-radius: 3px;
     margin: 0 auto;
     .card-title h4 {
-        font-family: Sfont-stack;
+        font-family: $font-stack;
         padding-top: 25px;
         font-size: 1.2rem;
         font-weight: 600;
