--- a/layouts/partials/hero-body.html
+++ b/layouts/partials/hero-body.html
@@ -17,9 +17,9 @@
         </h2>
         {{ end }}
         <p>
-          <a class="button cta rounded primary-btn raised" href="{{ $buttonLink }}">
+ <!--          <a class="button cta rounded primary-btn raised" href="{{ $buttonLink }}">
             {{ $buttonText }}
-          </a>
+          </a> -->
         </p>
       </div>
       <div class="column is-5 is-offset-1">
