--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,7 +9,9 @@
     <div class="columns">
       <div class="column">
         <div class="footer-logo">
+          {{- if $logo }}
           <img src="{{ printf "/images/logos/%s" $logo | relURL }}">
+          {{- end }}
         </div>
       </div>
       {{- range $quickLinks }}
@@ -21,9 +23,7 @@
             <ul class="link-list">
               {{- range .links }}
               <li>
-                <a href="{{ .link }}">
-                  {{ .text }}
-                </a>
+                <h4>{{ .text }}</h4>
               </li>
               {{- end }}
             </ul>
